--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "gulp-sass": "^5.1.0",
     "jquery": "^3.6.0",
     "sass": "^1.49.9"
